--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       src="https://kit.fontawesome.com/c8e4d183c2.js"
       crossorigin="anonymous"
     ></script>
+    <script src="index.js"></script>
   </head>
   <body>
     <section id="landing">
@@ -28,8 +29,24 @@
               </li>
             </ul>
           </div>
+          
+          <button class="btn__menu" onclick="openMenu()">
+            <i class="fas fa-bars"></i>
+          </button>
+          <div class="menu__backdrop">
+            <button class="btn__menu btn__menu--close" onclick="closeMenu()">
+              <i class="fas fa-times"></i>
+            </button>
+            <ul class="menu__links">
+              <li class="menu__list"><a class="menu__link" onclick="closeMenu()" href="#">Home</a></li>
+              <li class="menu__list"><a class="menu__link" onclick="closeMenu()" href="#features">Books</a></li>
+              <li class="menu__list"><a class="menu__link no-cursor" onclick="closeMenu()" href="">Contact</a></li>
+            </ul>
+          </div>
         </div>
+
       </nav>
+
 
       <header>
         <div class="header__container">
@@ -38,7 +55,10 @@
             <h2>
               Find your dream book with <span class="purple">Library</span>
             </h2>
-            <button class="btn">Browse books</button>
+            <a href="#features">
+
+              <button class="btn">Browse books</button>
+            </a>
           </div>
           <figure class="header__img--wrapper">
             <img src="./assets/Undraw_Books.svg" alt="" />
@@ -185,11 +205,7 @@
             <div class="books">
               <div class="book">
                 <figure class="book__img--wrapper">
-                  <img
-                    src="./assets/book-1.jpeg"
-                    alt=""
-                    class="book__img"
-                  />
+                  <img src="./assets/book-1.jpeg" alt="" class="book__img" />
                 </figure>
                 <div class="book__title">The 10X Rule</div>
                 <div class="book__rating">
@@ -205,11 +221,7 @@
               </div>
               <div class="book">
                 <figure class="book__img--wrapper">
-                  <img
-                    src="./assets/book-2.jpeg"
-                    alt=""
-                    class="book__img"
-                  />
+                  <img src="./assets/book-2.jpeg" alt="" class="book__img" />
                 </figure>
                 <div class="book__title">Be Obsessed or Be Average</div>
                 <div class="book__rating">
@@ -225,11 +237,7 @@
               </div>
               <div class="book">
                 <figure class="book__img--wrapper">
-                  <img
-                    src="./assets/book-3.jpeg"
-                    alt=""
-                    class="book__img"
-                  />
+                  <img src="./assets/book-3.jpeg" alt="" class="book__img" />
                 </figure>
                 <div class="book__title">Rich Dad Poor Dad</div>
                 <div class="book__rating">
@@ -332,13 +340,42 @@
         <div class="container">
           <div class="row">
             <div class="explore__description">
+              <h2 class="section__title">
+                Explore more <span class="purple">Books</span>
+              </h2>
+              <a href="#features"> 
 
-              <h2 class="section__title">Explore more <span class="purple">Books</span></h2>
-              <button class="btn">Browse Books</button>
+                <button class="btn">Browse Books</button>
+              </a>
             </div>
           </div>
         </div>
       </section>
     </main>
+
+    <section id="footer">
+      <footer>
+        <div class="container">
+          <div class="row row__column">
+            <a href="#">
+              <figure class="footer__logo">
+                <img
+                  src="./assets/Library.svg"
+                  alt=""
+                  class="footer__logo--img"
+                />
+              </figure>
+            </a>
+            <div class="footer__link--list">
+              <a class="footer__link" href="#">Home</a>
+              <a class="footer__link no-cursor" href="">About</a>
+              <a class="footer__link" href="#features">Books</a>
+              <a class="footer__link no-cursor" href="">Contact</a>
+            </div>
+            <div class="footer__copyright">Copyright © 2023 Library</div>
+          </div>
+        </div>
+      </footer>
+    </section>
   </body>
 </html>
