wrapped nav logo in figure

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <section id="landing">
       <nav>
         <div class="nav__container">
-          <img src="./assets/Library.svg" alt="logo" class="logo" />
+          <figure class="nav__logo--wrapper">
+            <img src="./assets/Library.svg" alt="logo" class="logo" />
+          </figure>
           <div class="nav__link--list">
             <ul>
               <li class="nav__links">
